--- a/NLayer.Web/Views/Products/Index.cshtml
+++ b/NLayer.Web/Views/Products/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-@model List<ProductWithCategory>
+@model List<ProductWithCategoryDto>
 
 <table class="table table-striped">
     <thead>
