--- a/NLayer.Web/Views/Products/Index.cshtml
+++ b/NLayer.Web/Views/Products/Index.cshtml
@@ -6,6 +6,7 @@
 @model List<ProductWithCategoryDto>
 
 <table class="table table-striped">
+    <a class="btn btn-primary" asp-controller="Products" asp-action="Save">Save Product</a>
     <thead>
         <tr>
             <td>Id</td>
